--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/kamara-moses/SoulWeather/issues"
   },
-  "homepage": "https://github.com/kamara-moses/SoulWeather#readme"
+  "homepage": "https://github.com/kamara-moses/SoulWeather#readme",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1"
+  }
 }
