--- a/package.json
+++ b/package.json
@@ -6,18 +6,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/server/server.js",
-    "build-dev": "webpack serve --config webpack.dev.js --open"
+    "build-dev": "webpack serve --config webpack.dev.js --open",
+    "build-prod": "webpack --config webpack.prod.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/kamara-moses/SoulWeather.git"
-  },
+  
   "author": "Moses Kamara",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/kamara-moses/SoulWeather/issues"
-  },
-  "homepage": "https://github.com/kamara-moses/SoulWeather#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
@@ -32,10 +26,13 @@
     "css-loader": "^5.1.3",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.1",
+    "mini-css-extract-plugin": "^1.3.9",
     "node-sass": "^5.0.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
     "sass": "^1.32.8",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
+    "terser-webpack-plugin": "^5.1.1",
     "webpack-dev-server": "^3.11.2",
     "workbox-webpack-plugin": "^6.1.2"
   }
